...
            app:layout_constraintTop_toTopOf="parent"
            android:layout_gravity="center"
            android:timePickerMode="spinner"
            />

        <EditText
            android:id="@+id/name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="5dp"
            android:ems="10"
...
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="5dp"
            android:text="Ringtone"
            android:textSize="14sp" />

        <Button
            android:id="@+id/save"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:layout_marginLeft="8dp"
            android:layout_marginBottom="5dp"
            android:layout_gravity="center"
...
