...
        app:layout_constraintTop_toTopOf="parent"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light" />

    <!-- the descendantFocusability helps to generate click events for this list ITSELF rather than button when it is pressed -->
    <ListView

        android:id="@+id/listview"
        android:layout_width="0dp"
        android:layout_height="0dp"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/my_toolbar"
        app:layout_constraintBottom_toTopOf="@id/addButton"
...
