<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android" android:layout_width="match_parent"
    android:layout_height="match_parent">

    <LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:gravity="center_vertical" >

        <EditText
            android:id="@+id/editTextUserName"
            android:hint="User Name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            >

            <requestFocus />
        </EditText>

        <EditText
            android:id="@+id/editTextPhoneNumber"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:hint="@string/prompt_number"
            android:inputType="phone" />

        <Button
            android:id="@+id/OK"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:text="OK"
            android:layout_marginBottom="60dp" />

    </LinearLayout>

</android.support.constraint.ConstraintLayout>