...
                android:text="Group Admin"
                android:textAlignment="center"
                android:textSize="20sp"
                tools:layout_editor_absoluteY="16dp" />

            <TextView
                android:id="@+id/displayName"
                android:layout_width="383dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:ems="10"
                android:text="Test"
...
